--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
+	"ownerNumber": "6283146993017",
+	"ownerNumberr": "6283146993017",
 	"cr": "@zeeoneofc",
 	"yt":"bit.ly/ytzeeoneofc",
 	"grub": "bit.ly/gczeeoneofc",
@@ -10,8 +10,8 @@
 	"donate": "bit.ly/dtzeeoneofc",
 	"ig": "bit.ly/igzeeoneofc",
 	"gt": "bit.ly/gtzeeoneofc",	
-	"ownername": "ZeeoneOfc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
+	"ownername": "Ikhsan",
+	"botname":"Shan Bot",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumb":"Alphabot.jpg",
 	"fakethumb":"Alphabot.jpg", 
